libreoffice (4:7.6.0~rc1~git20230701-1) UNRELEASED; urgency=medium

  * New upstream snapshot 

  * debian/patches/we-dont-have-the-needed-fonts.diff: disable test which
    needs fonts neither provided in Debian (nor even upstream)
  * debian/patches/bash-completion-updates.diff: add pages to lowriters bash
    completion (closes: #1033186)

  * debian/rules:
    - use --disable-cve-tests on 32bit archs. Fails consistently there on one
      CVE which was a memory leak in tiff and a excpected failure here anyway.
      Fixed in tiff ages ago and we're not really supposed to test others' CVEs as
      we use external libs anyway
    - again run full make check on amd64/arm64/riscv64(!) (and armhf); make fatal
    - only run testtools' bridgetest and "smoketest" as smoketest on all
      architectures except amd64/amd64/riscv64/armhf
  * debian/rules, debian/control.in: 
    - change fonts-liberation2 Build-Depends/Recommends in -common to
      fonts-liberation (>= 1:2)
    - change fonts-liberation2 Build-Depends to fonts-liberation (>= 1:2)

 -- Rene Engelhard <rene@debian.org>  Sat, 01 Jul 2023 17:29:20 +0200

libreoffice (4:7.6.0~beta1-3) experimental; urgency=medium

  * debian/patches/fix-arm64-tests.diff: as name says, from upstream
    libreoffice-7-6 branch
  * debian/source/include-binaries: add changed .emf files

  * debian/patches/adapt-for-new-carlito.diff: as name says; adapt two
    (and disable one for now since iit has calculated values..) test(s) which
    break with fonts-crosextra-carlito 20230309. Bump build-dependency.
    Revert all of this for bookworm-backports.

  * debian/rules:
    - restrict -2 changes to make test failures only fatal on release
      architectures + upcoming release architectures (like riscv64). 
      Still build and run the tests on all architectures.
  * debian/rules, debian/control.in: 
    - recommend fonts-liberation+fonts-liberation-sans-narrow instead of both