@@ -1204,7 +1204,7 @@ Description: generic Java Bean wrapper for LibreOffice components
 Package: libreoffice-uiconfig-common
 Section: misc
 Architecture: all
-Replaces: libreoffice-common (<< 1:7.6.0~beta1)
+Replaces: libreoffice-common (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice ("common" set)
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1219,9 +1219,9 @@ Description: UI data ("config") for LibreOffice ("common" set)
 Package: libreoffice-uiconfig-base
 Section: misc
 Architecture: all
-Replaces: libreoffice-base (<< 1:7.6.0~beta1),
-          libreoffice-base-nogui (<< 1:7.6.0~beta1),
-          libreoffice-common (<< 1:7.6.0~beta1)
+Replaces: libreoffice-base (<< 4:7.6.0~beta1),
+          libreoffice-base-nogui (<< 4:7.6.0~beta1),
+          libreoffice-common (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Base
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1236,9 +1236,9 @@ Description: UI data ("config") for LibreOffice Base
 Package: libreoffice-uiconfig-calc
 Section: misc
 Architecture: all
-Replaces: libreoffice-calc (<< 1:7.6.0~beta1),
-          libreoffice-calc-nogui (<< 1:7.6.0~beta1),
-          libreoffice-common (<< 1:7.6.0~beta1)
+Replaces: libreoffice-calc (<< 4:7.6.0~beta1),
+          libreoffice-calc-nogui (<< 4:7.6.0~beta1),
+          libreoffice-common (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Calc
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1253,9 +1253,9 @@ Description: UI data ("config") for LibreOffice Calc
 Package: libreoffice-uiconfig-draw
 Section: misc
 Architecture: all
-Replaces: libreoffice-common (<< 1:7.6.0~beta1),
-          libreoffice-draw (<< 1:7.6.0~beta1),
-          libreoffice-draw-nogui (<< 1:7.6.0~beta1)
+Replaces: libreoffice-common (<< 4:7.6.0~beta1),
+          libreoffice-draw (<< 4:7.6.0~beta1),
+          libreoffice-draw-nogui (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Draw
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1270,11 +1270,11 @@ Description: UI data ("config") for LibreOffice Draw
 Package: libreoffice-uiconfig-impress
 Section: misc
 Architecture: all
-Replaces: libreoffice-common (<< 1:7.6.0~beta1),
-          libreoffice-draw (<< 1:7.6.0~beta1),
-          libreoffice-draw-nogui (<< 1:7.6.0~beta1),
-          libreoffice-impress (<< 1:7.6.0~beta1),
-          libreoffice-impress-nogui (<< 1:7.6.0~beta1)
+Replaces: libreoffice-common (<< 4:7.6.0~beta1),
+          libreoffice-draw (<< 4:7.6.0~beta1),
+          libreoffice-draw-nogui (<< 4:7.6.0~beta1),
+          libreoffice-impress (<< 4:7.6.0~beta1),
+          libreoffice-impress-nogui (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Impress
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1289,9 +1289,9 @@ Description: UI data ("config") for LibreOffice Impress
 Package: libreoffice-uiconfig-math
 Section: misc
 Architecture: all
-Replaces: libreoffice-common (<< 1:7.6.0~beta1),
-          libreoffice-math (<< 1:7.6.0~beta1),
-          libreoffice-math-nogui (<< 1:7.6.0~beta1)
+Replaces: libreoffice-common (<< 4:7.6.0~beta1),
+          libreoffice-math (<< 4:7.6.0~beta1),
+          libreoffice-math-nogui (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Math
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -1306,9 +1306,9 @@ Description: UI data ("config") for LibreOffice Math
 Package: libreoffice-uiconfig-writer
 Section: misc
 Architecture: all
-Replaces: libreoffice-common (<< 1:7.6.0~beta1),
-          libreoffice-writer (<< 1:7.6.0~beta1),
-          libreoffice-writer-nogui (<< 1:7.6.0~beta1)
+Replaces: libreoffice-common (<< 4:7.6.0~beta1),
+          libreoffice-writer (<< 4:7.6.0~beta1),
+          libreoffice-writer-nogui (<< 4:7.6.0~beta1)
 Description: UI data ("config") for LibreOffice Writer
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
